[gd_scene load_steps=13 format=2]

[ext_resource path="res://GameObjects/Wall.tscn" type="PackedScene" id=1]
[ext_resource path="res://GameObjects/Ball.tscn" type="PackedScene" id=2]
[ext_resource path="res://GameObjects/Racked.tscn" type="PackedScene" id=3]
[ext_resource path="res://GameObjects/WinArea.tscn" type="PackedScene" id=4]
[ext_resource path="res://GameLogic.gd" type="Script" id=5]
[ext_resource path="res://GUILogic.gd" type="Script" id=6]
[ext_resource path="res://Fonts/AtariFontFullVersion.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://GUIElements/PauseMenu.tscn" type="PackedScene" id=8]
[ext_resource path="res://GUIElements/VictoryPanel.tscn" type="PackedScene" id=9]
[ext_resource path="res://Fonts/MainTheme.tres" type="Theme" id=10]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 7 )

[node name="MainScene" type="Node2D"]
position = Vector2( 1.41418, 0 )
script = ExtResource( 5 )
BallStartPosition = Vector2( 400, 300 )
RacketOneStartPosition = Vector2( 75, 300 )
RacketTwoStartPosition = Vector2( 725, 300 )

[node name="Background" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Background"]
margin_left = -1.88776
margin_right = 798.112
margin_bottom = 600.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Background"]
margin_left = 390.0
margin_right = 410.0
margin_bottom = 600.0
custom_constants/separation = 52
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Background/VBoxContainer"]
margin_right = 20.0
margin_bottom = 41.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect2" type="ColorRect" parent="Background/VBoxContainer"]
margin_top = 93.0
margin_right = 20.0
margin_bottom = 134.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect3" type="ColorRect" parent="Background/VBoxContainer"]
margin_top = 186.0
margin_right = 20.0
margin_bottom = 227.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect4" type="ColorRect" parent="Background/VBoxContainer"]
margin_top = 279.0
margin_right = 20.0
margin_bottom = 320.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect5" type="ColorRect" parent="Background/VBoxContainer"]
margin_top = 372.0
margin_right = 20.0
margin_bottom = 413.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect6" type="ColorRect" parent="Background/VBoxContainer"]
margin_top = 465.0
margin_right = 20.0
margin_bottom = 506.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect7" type="ColorRect" parent="Background/VBoxContainer"]
margin_top = 558.0
margin_right = 20.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GameObjects" type="Node2D" parent="."]

[node name="Ball" parent="GameObjects" instance=ExtResource( 2 )]
position = Vector2( 304.586, 300 )
Direction = Vector2( -1, 1 )

[node name="Wall1" parent="GameObjects" instance=ExtResource( 1 )]
position = Vector2( 400.386, 10.2449 )
rotation = 1.5708

[node name="Wall2" parent="GameObjects" instance=ExtResource( 1 )]
position = Vector2( 399.386, 589.886 )
rotation = 1.5708

[node name="WinArea" parent="GameObjects" instance=ExtResource( 4 )]
position = Vector2( 8.41422, 297.828 )
CurrentPlayer = "Player2"

[node name="WinArea2" parent="GameObjects" instance=ExtResource( 4 )]
position = Vector2( 788.938, 300.019 )

[node name="Racket" parent="GameObjects" instance=ExtResource( 3 )]
position = Vector2( 75, 300 )
UpAction = "player1_up"
DownAction = "player1_down"
Speed = 100.0
Length = 100

[node name="Racket2" parent="GameObjects" instance=ExtResource( 3 )]
position = Vector2( 725, 300 )
UpAction = "player2_up"
DownAction = "player2_down"
Speed = 50.0
Length = 75
Brain = true

[node name="GUI" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_right = 800.0
margin_bottom = 600.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player1Score" type="Label" parent="GUI"]
margin_left = 306.569
margin_top = 20.946
margin_right = 389.569
margin_bottom = 54.946
theme = ExtResource( 10 )
custom_fonts/font = SubResource( 1 )
text = "999"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player2Score" type="Label" parent="GUI"]
margin_left = 420.297
margin_top = 21.1352
margin_right = 503.297
margin_bottom = 55.1352
theme = ExtResource( 10 )
custom_fonts/font = SubResource( 1 )
text = "999"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartTimerLabel" type="Label" parent="GUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -79.0
margin_top = -29.5
margin_right = 79.0
margin_bottom = 29.5
theme = ExtResource( 10 )
custom_colors/font_color = Color( 0.239216, 0.792157, 0.831373, 1 )
custom_fonts/font = SubResource( 2 )
text = "999"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseMenu" parent="GUI" instance=ExtResource( 8 )]
visible = false

[node name="VictoryPanel" parent="GUI" instance=ExtResource( 9 )]
visible = false

[node name="ScriptsObjects" type="Node" parent="."]

[node name="StartTime" type="Timer" parent="ScriptsObjects"]
process_mode = 0

[connection signal="timeout" from="ScriptsObjects/StartTime" to="." method="_on_StartTime_timeout"]
